--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Portfolio - Stasiak</title>
+  <title>Portfolio - Lucas Vilela</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -13,13 +13,13 @@
 
   <main class="apresentacao">
     <div class="apresentacao__conteudo">
-      <h1 class="apresentacao__conteudo__titulo"> Eleve seu negócio digital a outro nível <strong>com um Front-end de respeito!</strong></h1>
+      <h1 class="apresentacao__conteudo__titulo"> Venha aumentar seu negócio e elevar seu conhecimento<strong>Front-end!</strong></h1>
 
-      <p class="apresentacao__conteudo__paragrafo"> Olá! Meu nome é Lucas Stasiak, desenvolvedor Front-end com especialidade em HTML E CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos começar?</p>
+      <p class="apresentacao__conteudo__paragrafo"> Olá! Meu nome é Lucas vilela, sou um pequeno novo empreendedor no mercado de trabalho, em que posso lhe ajudar?</p>
 
       <div class="apresentacao__links">
-        <a class="apresentacao__links__link" href="https://instagram.com/stasiak137">Instagram</a>
-        <a class="apresentacao__links__link" href="https://github.com/stasiaklucas">GitHub</a>
+        <a class="apresentacao__links__link" href="https://instagram.com/vilellazx">Instagram</a>
+        <a class="apresentacao__links__link" href="https://github.com/lucasvilela7">GitHub</a>
       </div>
 
     </div>
