--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="apresentacao__conteudo">
       <h1 class="apresentacao__conteudo__titulo"> Venha aumentar seu negócio e elevar seu conhecimento<strong>Front-end!</strong></h1>
 
-      <p class="apresentacao__conteudo__paragrafo"> Olá! Meu nome é Lucas vilela, sou um pequeno novo empreendedor no mercado de trabalho, em que posso lhe ajudar?</p>
+      <p class="apresentacao__conteudo__paragrafo"> Olá! Meu nome é Lucas Vilela, sou um pequeno novo empreendedor no mercado de trabalho, em que posso lhe ajudar?</p>
 
       <div class="apresentacao__links">
         <a class="apresentacao__links__link" href="https://instagram.com/vilellazx">Instagram</a>
