--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     </div>
 
-      <img class="foto" src="foto.jpg">
+      <img class="foto" src="foto.png">
 
   </main> <!-- Main é a parte principal -->
 
